--- a/SimTECH/SimTECH/Pages/Motorsport/Contracts/Manager/ManagerDropper.razor
+++ b/SimTECH/SimTECH/Pages/Motorsport/Contracts/Manager/ManagerDropper.razor
@@ -46,11 +46,18 @@
         </ChildContent>
         <ItemRenderer>
             <MudPaper Class="mud-width-full border-2 border-dashed mud-border-tertiary pa-1 my-2" Style="@IsDisabledStyles(context.Id)">
-                <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0 mx-1">
-                    <MudText Class="overflow-hider">@(context.Duration) - @(context.Driver?.FullName ?? "[Unknown]")</MudText>
-                    <MudSpacer />
-                    <CountryFlag Code="@context.Driver?.Country" Size="ElementSize.Small" />
-                </MudStack>
+                
+                <div class="d-flex flex-col">
+                    <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0 mx-1">
+                        <MudText Class="overflow-hider">@context.Driver?.FullName</MudText>
+                        <MudSpacer />
+                        <CountryFlag Code="@context.Driver?.Country" Size="ElementSize.Small" />
+                    </MudStack>
+                    <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center" Class="pa-0 mx-1">
+                        <MudNumericField @bind-Value="context.Duration" Disabled />
+                        <MudToggleIconButton></MudToggleIconButton>
+                    </MudStack>
+                </div>
             </MudPaper>
         </ItemRenderer>
     </MudDropContainer>
