--- a/SimTECH/SimTECH/Components/CountryNamedFlag.razor
+++ b/SimTECH/SimTECH/Components/CountryNamedFlag.razor
@@ -1,11 +1,11 @@
 ﻿<MudStack Row="true" Justify="@Justify" AlignItems="AlignItems.Center" Reverse="@Reverse" Class="pa-0">
-    <CountryFlag Code="@Code" Size="@Size" Class="@(_countryClasses)" />
+    <CountryFlag Code="@Code" Size="@Size" Class="@_countryClasses" />
     <span class="mx-2"></span>
     <MudText Typo="@Typo">@flagNationName</MudText>
 </MudStack>
 
 @code {
-    [Parameter] public Country Code { get; set; }
+    [Parameter] public Country? Code { get; set; }
     [Parameter] public ElementSize Size { get; set; } = ElementSize.Normal;
     [Parameter] public Justify Justify { get; set; } = Justify.SpaceBetween;
     [Parameter] public Typo Typo { get; set; } = Typo.body1;
