--- a/SimTECH/SimTECH/Components/StateTogglerButton.razor
+++ b/SimTECH/SimTECH/Components/StateTogglerButton.razor
@@ -10,10 +10,8 @@
                      ToggledChanged="ToggleChanged" />
 
 @code {
-    [Parameter, EditorRequired]
-    public EventCallback<bool> CallbackToggled { get; set; }
-    [Parameter]
-    public bool Default { get; set; }
+    [Parameter, EditorRequired] public EventCallback<bool> CallbackToggled { get; set; }
+    [Parameter] public bool Default { get; set; }
 
     private async Task ToggleChanged(bool toggled) => await CallbackToggled.InvokeAsync(toggled);
 }
