Removed contracts table, just have the manager for leagues specifically now

--- a/SimTECH/SimTECH/Pages/Leagues/ContractManager/Components/ManagerSettings.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/ContractManager/Components/ManagerSettings.razor
@@ -1,11 +1,4 @@
 ﻿<MudStack Row="true" Spacing="5" Justify="Justify.Center" AlignItems="AlignItems.Center">
-    <MudSelect T="long" @bind-Value="@_selectedLeagueId" Label="League" Class="field-md">
-        @foreach (var league in Leagues)
-        {
-            <MudSelectItem Value="@league.Id">@league.Name</MudSelectItem>
-        }
-    </MudSelect>
-
     <MudSwitchM3 @bind-Checked="@_onlyActiveTeams"
                  ThumbIcon="@Icons.Material.Filled.Done"
                  ThumbOffIcon="@Icons.Material.Filled.Close"
@@ -18,16 +11,10 @@
                  Label="Drivers active in League"
                  Color="Color.Secondary" />
 
-    <MudButton Color="Color.Primary" Variant="Variant.Outlined" OnClick="@(() => OnLoad.InvokeAsync())">Load</MudButton>
+    @ChildContent
 </MudStack>
 
 @code {
-    long _selectedLeagueId
-    {
-        get => SelectedLeagueId;
-        set => SelectedLeagueIdChanged.InvokeAsync(value);
-    }
-
     bool _onlyActiveTeams
     {
         get => OnlyActiveTeams;
@@ -39,17 +26,12 @@
         get => OnlyActiveDrivers;
         set => OnlyActiveDriversChanged.InvokeAsync(value);
     }
-    
-    [Parameter] public List<League> Leagues { get; set; }
 
-    [Parameter] public long SelectedLeagueId { get; set; }
-    [Parameter] public EventCallback<long> SelectedLeagueIdChanged { get; set; }
+    [Parameter] public RenderFragment? ChildContent { get; set; }
 
     [Parameter] public bool OnlyActiveTeams { get; set; }
     [Parameter] public EventCallback<bool> OnlyActiveTeamsChanged { get; set; }
 
     [Parameter] public bool OnlyActiveDrivers { get; set; }
     [Parameter] public EventCallback<bool> OnlyActiveDriversChanged { get; set; }
-
-    [Parameter] public EventCallback OnLoad { get; set; }
 }
