--- a/SimTECH/SimTECH/Shared/NavMenu.razor
+++ b/SimTECH/SimTECH/Shared/NavMenu.razor
@@ -16,7 +16,7 @@
         <MudNavLink Href="/climates" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Cloud">Climates</MudNavLink>
     </MudNavGroup>
 
-    <MudNavLink Href="/motorsport" Match="NavLinkMatch.Prefix" Icon="@IconCollection.Trophy">Motorsport</MudNavLink>
+    <MudNavLink Href="/leagues" Match="NavLinkMatch.Prefix" Icon="@IconCollection.Trophy">Leagues</MudNavLink>
     
     <MudNavLink Href="/seasons" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Flag">Seasons</MudNavLink>
 
