Made a few cute af changes at the dropper

--- a/SimTECH/SimTECH/Pages/Leagues/ContractManager/Components/ManagerSettings.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/ContractManager/Components/ManagerSettings.razor
@@ -1,18 +1,14 @@
-﻿<MudStack Row="true" Spacing="5" Justify="Justify.Center" AlignItems="AlignItems.Center">
-    <MudSwitchM3 @bind-Checked="@_onlyActiveTeams"
-                 ThumbIcon="@Icons.Material.Filled.Done"
-                 ThumbOffIcon="@Icons.Material.Filled.Close"
-                 Label="Teams active in league"
-                 Color="Color.Secondary" />
+﻿<MudSwitchM3 @bind-Checked="@_onlyActiveTeams"
+             ThumbIcon="@Icons.Material.Filled.Done"
+             ThumbOffIcon="@Icons.Material.Filled.Close"
+             Label="Teams active in league"
+             Color="Color.Secondary" />
 
-    <MudSwitchM3 @bind-Checked="@_onlyActiveDrivers"
-                 ThumbIcon="@Icons.Material.Filled.Done"
-                 ThumbOffIcon="@Icons.Material.Filled.Close"
-                 Label="Drivers active in League"
-                 Color="Color.Secondary" />
-
-    @ChildContent
-</MudStack>
+<MudSwitchM3 @bind-Checked="@_onlyActiveDrivers"
+             ThumbIcon="@Icons.Material.Filled.Done"
+             ThumbOffIcon="@Icons.Material.Filled.Close"
+             Label="Drivers active in League"
+             Color="Color.Secondary" />
 
 @code {
     bool _onlyActiveTeams
