--- a/SimTECH/SimTECH/_Imports.razor
+++ b/SimTECH/SimTECH/_Imports.razor
@@ -9,7 +9,6 @@
 @using MudExtensions
 @using SimTECH
 @using SimTECH.Common.Enums
-@using SimTECH.Components
 @using SimTECH.Constants
 @using SimTECH.Data.EditModels
 @using SimTECH.Data.Models
@@ -22,5 +21,6 @@
 @using SimTECH.PageModels.Seasons.Standings
 @using SimTECH.Providers
 @using SimTECH.Shared
+@using SimTECH.Shared.Components
 @using System.ComponentModel
 @using System.Net.Http
