--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -33,10 +33,6 @@
     src: url('../fonts/Shoguns Clan.ttf') format('truetype');
 }
 
-.text-border-stroke {
-    -webkit-text-stroke: 1px black;
-}
-
 html, body {
     font-family: NovaRegular;
     font-size: 20px;
@@ -115,6 +111,10 @@ th {
     white-space: nowrap;
 }
 
+.overflow-x-hide {
+    overflow-x: hidden;
+}
+
 .field-xs, .field-xs > * {
     width: 75px;
 }
@@ -152,32 +152,7 @@ th {
     text-align: center !important;
 }
 
-/* extensions on mudblazor css variables */
-.dialog-shadow {
-    box-shadow: var(--mud-palette-secondary) 0 0 2em !important;
-}
-
-.collapse table {
-    border-collapse: collapse;
-}
-
-.dense-field > .mud-input-control-input-container > div.mud-input.mud-input-text {
-    margin-top: 0px !important;
-}
-
-.extra-dense .mud-table-cell {
-    padding-top: 4px !important;
-    padding-bottom: 4px !important;
-}
-
-.overflow-x-hide {
-    overflow-x: hidden;
-}
-
-.hide-sort-icons .column-options {
-    display: none !important;
-}
-
+/* colours */
 .muted-background-primary {
     background-color: color-mix(in srgb, var(--mud-palette-primary) 25%, transparent) !important;
 }
@@ -194,6 +169,12 @@ th {
     background-color: rgba(230, 230, 230, 0.25) !important;
 }
 
+/* buttons */
+.inline-edit-toggle-btn {
+    cursor: pointer !important;
+}
+
+/* text */
 .font-default {
     font-family: var(--mud-typography-default-family);
 }
@@ -231,9 +212,7 @@ th {
     font-family: var(--mud-typography-subtitle2-family);
 }
 
-/* page specific stylings */
-
-/* season */
+/* season page */
 .result-cell {
     border: 0.5px solid black !important;
     color: black !important;
@@ -241,6 +220,29 @@ th {
     text-align: center !important;
     padding: 0px !important;
 }
+
+/* extensions on mudblazor css variables */
+.dialog-shadow {
+    box-shadow: var(--mud-palette-secondary) 0 0 2em !important;
+}
+
+.collapse table {
+    border-collapse: collapse;
+}
+
+.dense-field > .mud-input-control-input-container > div.mud-input.mud-input-text {
+    margin-top: 0px !important;
+}
+
+.extra-dense .mud-table-cell {
+    padding-top: 4px !important;
+    padding-bottom: 4px !important;
+}
+
+.hide-sort-icons .column-options {
+    display: none !important;
+}
+
 
 /* default blazor css elements */
 #blazor-error-ui {
