--- a/SimTECH/SimTECH/Pages/Leagues/ContractManager/Components/ManagerDropper.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/ContractManager/Components/ManagerDropper.razor
@@ -37,7 +37,7 @@
         </MudStack>
     </ChildContent>
     <ItemRenderer>
-        <MudPaper Class="mud-width-full border-2 border-dashed mud-border-tertiary pa-1 my-2" Style="@IsDisabledStyles(context.Id)">
+        <MudPaper Class="mud-width-full border-2 border-dashed mud-border-tertiary pa-1 my-2" Style="@context.DropperStyle">
             <div class="d-flex flex-column">
                 <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0 mx-1">
                     <MudText Class="overflow-hider">@context.Driver?.FullName</MudText>
@@ -47,8 +47,11 @@
                 @if (context.TeamId != default)
                 {
                     <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center" Class="pa-0 mx-1" Style="pointer-events: auto !important;">
-                        <MudNumericField @bind-Value="context.Duration" Disabled="@(!context.Editing)" Class="field-sm dense-field" />
-                        <MudToggleIconButton Size="@Size.Small"
+                        <MudNumericField @bind-Value="context.Duration"
+                                         Min="1"
+                                         Disabled="@(!context.Editing)"
+                                         Class="dense-field" />
+                        <MudToggleIconButton Size="Size.Small"
                                              Icon="@Icons.Material.Filled.Edit"
                                              Color="Color.Info"
                                              Title="Edit"
@@ -57,7 +60,7 @@
                                              ToggledColor="Color.Success"
                                              ToggledTitle="Save"
                                              @bind-Toggled="context.Editing"
-                                             Style="cursor: pointer !important;">
+                                             Class="muted-background-secondary inline-edit-toggle-btn">
                         </MudToggleIconButton>
                     </MudStack>
                 }
@@ -87,17 +90,5 @@
             dropItem.Item.TeamId = teamId;
             dropItem.Item.Team = Teams.FirstOrDefault(e => e.Id == teamId);
         }
-    }
-
-    private string IsDisabledStyles(long contractId)
-    {
-        if (contractId != 0)
-        {
-            return @"color: var(--mud-palette-action-disabled) !important;
-                     cursor: default !important;
-                     pointer-events: none !important;";
-        }
-
-        return string.Empty;
     }
 }
