Detaoilleague  improov, sliders and such

--- a/SimTECH/SimTECH/Pages/Leagues/Dialogs/LeagueEditor.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Dialogs/LeagueEditor.razor
@@ -43,9 +43,9 @@
                         </MudChipSet>
                     }
 
-                    <MudText Typo="Typo.subtitle1">Options</MudText>
+                    <MudText Typo="Typo.subtitle1" Class="mt-2">Options</MudText>
                     <MudDivider />
-                    <MudStack>
+                    <MudStack Class="mt-2">
                         <MudSwitchM3 @bind-Checked="Model.UsePenalty"
                                      ThumbIcon="@Icons.Material.Filled.Done"
                                      ThumbOffIcon="@Icons.Material.Filled.Close"
