--- a/SimTECH/SimTECH/Pages/Leagues/Index.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Index.razor
@@ -1,5 +1,6 @@
 ﻿@page "/leagues"
 
+@using SimTECH.PageModels.Leagues;
 @using SimTECH.Pages.Leagues.Dialogs;
 
 @inject LeagueService _leagueService
@@ -7,6 +8,7 @@
 @inject BreadcrumbProvider _bread
 @inject NavigationManager _nav
 @inject IDialogService _dialogService
+@inject IOptions<SimConfig> _config
 
 <PageTitle>Leagues</PageTitle>
 
@@ -19,24 +21,24 @@
             New
         </MudButton>
     </MudPaper>
-    <MudDataGrid T="League" Items="@leagues" Bordered="true">
+    <MudDataGrid T="LeagueListItem" Items="@LeagueList" Bordered="true">
         <Columns>
-            <HierarchyColumn T="League" />
+            <HierarchyColumn T="LeagueListItem" />
             <PropertyColumn Property="e => e!.Name" />
             <PropertyColumn Property="e => e!.RaceLength" Title="Length" Style="font-family: var(--mud-typography-caption-family)" />
-            <TemplateColumn T="League" Sortable="false">
+            <TemplateColumn T="LeagueListItem" Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup Size="Size.Small">
                         <MudIconButton Icon="@Icons.Material.Outlined.Edit"
-                                       OnClick="@(async () => await UpdateLeague(context.Item))" />
+                                       OnClick="@(async () => await UpdateLeague(context.Item.League))" />
                         <MudIconButton Icon="@Icons.Material.Outlined.Delete"
                                        Color="Color.Error"
-                                       OnClick="@(async () => await DeleteLeague(context.Item))" />
+                                       OnClick="@(async () => await DeleteLeague(context.Item.League))" />
                         @if (context.Item.Options.HasFlag(LeagueOptions.AllowContracting))
                         {
                             <MudIconButton Icon="@Icons.Material.Filled.AssignmentInd"
                                            Color="Color.Primary"
-                                           OnClick="@(() => GoToManager(context.Item))" />
+                                           OnClick="@(() => GoToManager(context.Item.Id))" />
                         }
                     </MudButtonGroup>
                 </CellTemplate>
@@ -44,74 +46,128 @@
         </Columns>
         <ChildRowContent>
             <MudPaper Elevation="15" Class="pa-2">
-                <MudText Typo="Typo.h5">League info</MudText>
+                <MudText Typo="Typo.h5">@context.Item.Name</MudText>
                 <MudDivider />
 
-                <MudPaper Class="pa-2">
-                    <MudText Typo="Typo.subtitle1">Options</MudText>
-                    <MudText Typo="Typo.body2">
-                        Penalties are @(context.Item.Options.HasFlag(LeagueOptions.EnablePenalty) ? "enabled" : "disabled")
-                    </MudText>
-                    <MudText Typo="Typo.body2">
-                        Fatalities are @(context.Item.Options.HasFlag(LeagueOptions.EnableFatality) ? "enabled" : "disabled")
-                    </MudText>
-                    <MudText Typo="Typo.body2">
-                        Contracts are @(context.Item.Options.HasFlag(LeagueOptions.AllowContracting) ? "enabled" : "disabled")
-                    </MudText>
-                </MudPaper>
+                <MudStack Row="true" Justify="Justify.SpaceBetween" Class="pa-0">
+                    <MudPaper Elevation="15" Class="px-4 py-2">
+                        <MudText Typo="Typo.h5">Options</MudText>
+                        <MudDivider />
 
-                <MudPaper Class="px-4 py-2">
-                    <MudStack Row="true" Class="pa-0">
-                        @foreach (var tyreId in context.Item.LeagueTyres ?? new List<LeagueTyre>())
-                        {
-                            <MudText Typo="Typo.h5">ID: @tyreId.TyreId</MudText>
-                        }
-                    </MudStack>
-                </MudPaper>
+                        <MudStack Class="mt-2">
+                            <MudSwitchM3 Checked="@context.Item.Options.HasFlag(LeagueOptions.EnablePenalty)"
+                                         ThumbIcon="@Icons.Material.Filled.Done"
+                                         ThumbOffIcon="@Icons.Material.Filled.Close"
+                                         Label="Penalties"
+                                         ReadOnly="true"
+                                         Color="Color.Secondary" />
 
-                @if (context.Item.DevelopmentRanges != null)
-                {
-                    <MudText Typo="Typo.h6">Development ranges</MudText>
-                    <MudStack Spacing="2" Row="true" Justify="Justify.SpaceBetween" Class="flex-wrap ">
-                        @foreach (var rangeGroup in context.Item.DevelopmentRanges.GroupBy(e => e.Type))
-                        {
-                            <MudStack>
-                                <MudText Typo="Typo.subtitle1">@rangeGroup.Key</MudText>
-                                <MudSimpleTable>
-                                    <thead>
-                                        <tr>
-                                            <th>&lt; LESS</th>
-                                            <th>Lower</th>
-                                            <th>Upper</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        @foreach (var range in rangeGroup.OrderBy(e => e.Comparer))
-                                        {
+                            <MudSwitchM3 Checked="@context.Item.Options.HasFlag(LeagueOptions.EnableFatality)"
+                                         ThumbIcon="@Icons.Material.Filled.Done"
+                                         ThumbOffIcon="@Icons.Material.Filled.Close"
+                                         Label="Fatalities"
+                                         ReadOnly="true"
+                                         Color="Color.Secondary" />
+
+                            <MudSwitchM3 Checked="@context.Item.Options.HasFlag(LeagueOptions.AllowContracting)"
+                                         ThumbIcon="@Icons.Material.Filled.Done"
+                                         ThumbOffIcon="@Icons.Material.Filled.Close"
+                                         Label="Contracts"
+                                         ReadOnly="true"
+                                         Color="Color.Secondary" />
+                        </MudStack>
+                    </MudPaper>
+
+                    <MudPaper Elevation="15" Class="px-4 py-2">
+                        <MudText Typo="Typo.h5">Available tyres</MudText>
+                        <MudDivider />
+
+                        <MudSimpleTable>
+                            <thead>
+                                <tr>
+                                    <th>Tyre</th>
+                                    <th>LB</th>
+                                    <th>Wear</th>
+                                    <th>Length</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var tyre in context.Item.LeagueTyres)
+                                {
+                                    <tr>
+                                        <td>
+                                            <TyreElement Colour="@tyre.Colour">
+                                                @tyre.Name.ElementAt(0)
+                                            </TyreElement>
+                                        </td>
+                                        <td>@tyre.Pace</td>
+                                        <td>
+                                            <MudStack Row="true" Spacing="1" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center">
+                                                <MudText Typo="Typo.caption">@tyre.WearMin</MudText>
+                                                <MudIcon Size="Size.Small" Icon="@IconCollection.ArrowMoveHorizontal" />
+                                                <MudText Typo="Typo.caption">@tyre.WearMax</MudText>
+                                            </MudStack>
+                                        </td>
+                                        <td>@tyre.ExpectedLength(advanceDistance)km</td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </MudSimpleTable>
+                    </MudPaper>
+                </MudStack>
+
+                <MudPaper Elevation="15" Class="px-4 py-2">
+                    <MudText Typo="Typo.h5">Development ranges</MudText>
+                    <MudDivider />
+
+                    @if (context.Item.DevelopmentRanges != null)
+                    {
+                        <MudStack Spacing="2" Row="true" Justify="Justify.SpaceBetween" Class="flex-wrap">
+                            @foreach (var rangeGroup in context.Item.DevelopmentRanges.GroupBy(e => e.Type))
+                            {
+                                <MudStack Class="mt-2">
+                                    <MudText Typo="Typo.subtitle1">@rangeGroup.Key</MudText>
+                                    <MudDivider />
+
+                                    <MudSimpleTable Striped="true">
+                                        <thead>
                                             <tr>
-                                                <td>@range.Comparer</td>
-                                                <td>@range.Minimum</td>
-                                                <td>@range.Maximum</td>
+                                                <th>&lt; LESS</th>
+                                                <th>Lower</th>
+                                                <th>Upper</th>
                                             </tr>
-                                        }
-                                    </tbody>
-                                </MudSimpleTable>
-                            </MudStack>
-                        }
-                    </MudStack>
-                }
-                else
-                {
-                    <MudText>There aren't any development ranges set at all!</MudText>
-                }
+                                        </thead>
+                                        <tbody>
+                                            @foreach (var range in rangeGroup.OrderBy(e => e.Comparer))
+                                            {
+                                                <tr>
+                                                    <td>@range.Comparer</td>
+                                                    <td>@range.Minimum</td>
+                                                    <td>@range.Maximum</td>
+                                                </tr>
+                                            }
+                                        </tbody>
+                                    </MudSimpleTable>
+                                </MudStack>
+                            }
+                        </MudStack>
+                    }
+                    else
+                    {
+                        <MudText>There aren't any development ranges set at all!</MudText>
+                    }
+                </MudPaper>
             </MudPaper>
         </ChildRowContent>
     </MudDataGrid>
 </MudContainer>
 
 @code {
-    private List<League> leagues = new();
-    private List<Tyre> tyres = new();
+    private List<LeagueListItem> LeagueList { get; set; } = new();
+    private List<League> Leagues { get; set; } = new();
+    private List<Tyre> Tyres { get; set; } = new();
+
+    private int advanceDistance;
 
     protected override async Task OnInitializedAsync()
     {
@@ -121,17 +177,33 @@
             new BreadcrumbItem("Leagues", href: "leagues", disabled: true),
         });
 
-        leagues = await _leagueService.GetLeagues();
-        tyres = await _tyreService.GetTyres(StateFilter.Active);
+        advanceDistance = _config.Value.CalculationDistance;
+
+        Tyres = await _tyreService.GetTyres(StateFilter.Active);
+        await LoadLeagueList();
+    }
+
+    private async Task LoadLeagueList()
+    {
+        Leagues = await _leagueService.GetLeagues();
+
+        LeagueList = Leagues.Select(league =>
+        {
+            var listItem = league.ToListItem();
+            var tyreIds = league.LeagueTyres?.Select(e => e.TyreId).ToList() ?? new();
+
+            listItem.LeagueTyres = Tyres.Where(e => tyreIds.Contains(e.Id)).ToList();
+            return listItem;
+        }).ToList();
     }
 
     private async Task AddLeague() => await UpdateLeague(null);
     private async Task UpdateLeague(League? item)
     {
-        var parameters = new DialogParameters { ["League"] = item, ["Tyres"] = tyres };
+        var parameters = new DialogParameters { ["League"] = item, ["Tyres"] = Tyres };
 
         var dialog = await _dialogService.ShowAsync<LeagueEditor>(
-            "Modify League",
+            "Modify league",
             parameters,
             new DialogOptions { MaxWidth = MaxWidth.ExtraLarge });
         var result = await dialog.Result;
@@ -139,15 +211,15 @@
         if (!result.Canceled && result.Data != null && result.Data is League updatedLeague)
         {
             await _leagueService.UpdateLeague(updatedLeague);
-            leagues = await _leagueService.GetLeagues();
+            await LoadLeagueList();
         }
     }
 
     private async Task DeleteLeague(League league)
     {
         await _leagueService.DeleteLeague(league);
-        leagues.Remove(league);
+        Leagues.Remove(league);
     }
 
-    private void GoToManager(League league) => _nav.NavigateTo($"contractmanager/{league.Id}");
+    private void GoToManager(long leagueId) => _nav.NavigateTo($"contractmanager/{leagueId}");
 }
