--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -212,6 +212,11 @@ th {
     font-family: var(--mud-typography-subtitle2-family);
 }
 
+/* dialogs */
+.additional-dialog-controls {
+    margin-right: 15px;
+}
+
 /* season page */
 .result-cell {
     border: 0.5px solid black !important;
