Create chart options instead of re-using the global file

--- a/SimTECH/SimTECH/Pages/Entrants/Drivers/Dialogs/DriverDetailStat.razor
+++ b/SimTECH/SimTECH/Pages/Entrants/Drivers/Dialogs/DriverDetailStat.razor
@@ -42,7 +42,7 @@
     private DataSet positionResult = new DataSet { Label = "Scored positions" };
 
     ApexCharts.ApexChart<DataPoint>? positionChart;
-    ApexCharts.ApexChartOptions<DataPoint> positionOptions = Globals.ChartOptionsDefault;
+    ApexCharts.ApexChartOptions<DataPoint> positionOptions = Globals.CreateDefaultChartOptions;
 
     bool loading = true;
 
