--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/ContractLengthRemaining.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/ContractLengthRemaining.razor
@@ -38,7 +38,7 @@
 
     private List<DataSet> driverContractDurations = new();
 
-    ApexCharts.ApexChartOptions<DataPoint> options = Globals.ChartOptionsDefault;
+    ApexCharts.ApexChartOptions<DataPoint> options = Globals.CreateDefaultChartOptions;
 
     bool loading = true;
 
