--- a/SimTECH/SimTECH/Pages/Stats/Dialogs/DriverCompareStat.razor
+++ b/SimTECH/SimTECH/Pages/Stats/Dialogs/DriverCompareStat.razor
@@ -74,7 +74,7 @@
     private Dictionary<Driver, DataSet> comparableDrivers = new();
 
     ApexCharts.ApexChart<DataPoint>? chart;
-    ApexCharts.ApexChartOptions<DataPoint> options = Globals.ChartOptionsDefault;
+    ApexCharts.ApexChartOptions<DataPoint> options = Globals.CreateDefaultChartOptions;
 
     bool loading = true;
     bool rendered = false;
