--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/StandingsTab/Dialogs/WccResultChart.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/StandingsTab/Dialogs/WccResultChart.razor
@@ -43,7 +43,7 @@
 
     protected override void OnInitialized()
     {
-        options = Globals.ChartOptionsDefault;
+        options = Globals.CreateDefaultChartOptions;
 
         var allotments = Season.PointAllotments?.ToDictionary(e => e.Position, e => e.Points) ?? new Dictionary<int, int>();
 
